# aipm

./: README.md  actions.py  format.sh  jira.py  jira_tuto.py  params.py  pyproject.toml  requirements.txt  tools.py
aipm/: actions.py  agent.py  api_wrapper.py  enum.py  param.py  params.py  prompt.py  prompts.py  tool.py  toolkit.py  tools.py
aipm/cli/: __init__.py  main.py
aipm/tools/: jira.py
